--changeset stefan:ddl:addExtensionUuidOssp
CREATE EXTENSION IF NOT EXISTS "uuid-ossp";
--rollback DROP EXTENSION IF EXISTS "uuid-ossp";

--changeset stefan:ddl:createTable:users
CREATE TABLE users (
  user_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  upn VARCHAR(60) NOT NULL
);
--rollback DROP TABLE "users";

--changeset stefan:ddl:createTable:rooms
CREATE TABLE rooms (
  room_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  room_uuid UUID DEFAULT uuid_generate_v4(),
  room_name VARCHAR(50) NOT NULL,
  owner_id INT NOT NULL,
  closed BOOLEAN NOT NULL DEFAULT FALSE,
  current_ticket_id INT
);
--rollback DROP TABLE "rooms";

--changeset stefan:ddl:createTable:users_in_rooms
CREATE TABLE users_in_rooms (
  user_in_room_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  user_id INT NOT NULL,
  room_id INT NOT NULL,
  UNIQUE (user_id, room_id)
);
--rollback DROP TABLE "users_in_rooms";

--changeset stefan:ddl:createTable:tickets
CREATE TABLE tickets (
  ticket_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  ticket_name VARCHAR(250) NOT NULL,
  room_id INT NOT NULL,
  revealed BOOLEAN NOT NULL DEFAULT FALSE
);
--rollback DROP TABLE "tickets";

--changeset stefan:ddl:createTable:votes
CREATE TABLE votes (
  vote_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  user_in_room_id INT NOT NULL,
  vote_type_id INT,
  ticket_id INT NOT NULL,
  UNIQUE (user_in_room_id, ticket_id)
);
--rollback DROP TABLE "votes";

--changeset stefan:ddl:createTable:vote_types
CREATE TABLE vote_types (
  vote_type_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  vote VARCHAR(25) NOT NULL
);
--rollback DROP TABLE "vote_types";
